<resources>
    <string name="app_name">Podchody</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Sign in</string>
    <string name="or">or</string>
    <string name="create_user">Create a New Account</string>
    <string name="email_hint">Email Address</string>
    <string name="new_user">Create Account</string>
    <string name="successful">Successful</string>
    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
    <string name="sing_out">Sing out</string>
    <string name="new_game">New game</string>
    <string name="game_title">Game title</string>
    <string name="et_game_title">Add game title</string>
    <string name="create_game">Create game</string>
    <string name="exit">Exit</string>
    <string name="seeker">Seeker</string>
    <string name="runner">Runner</string>
    <string name="no_player">Waiting for player</string>
    <string name="start_game">New Game</string>
    <string name="exit_game_dialog">Are you sure you want to exit this game?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="leave_mark">Leave a mark</string>
    <string name="message">Message</string>
    <string name="message_hint">Add message</string>
    <string name="add_mark">Add mark</string>




    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_authorization">AuthorizationActivity</string>
    <string name="title_activity_map">Map</string>
</resources>
