<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_start_game"
            android:text="@string/new_game"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/tv_game_title"
            android:text="@string/game_title"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_game_title"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/edittextbackground"
            android:hint="@string/et_game_title"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_game_title"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_create_game"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/create_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_game_title"
            app:layout_constraintStart_toEndOf="@id/btn_exit"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="50dp"
            android:text="@string/exit"
            app:layout_constraintEnd_toStartOf="@id/btn_create_game"
            app:layout_constraintTop_toBottomOf="@id/et_game_title"
            app:layout_constraintStart_toStartOf="parent"
            />

    </android.support.constraint.ConstraintLayout>
</layout>