<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_leave_mark"
            android:text="@string/leave_mark"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/tv_message"
            android:text="@string/message"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_leave_mark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="top|start"
            android:padding="10dp"
            android:background="@drawable/edittextbackground"
            android:inputType = "textMultiLine"
            android:layout_marginEnd="10dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:hint="@string/message_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_message"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_add_marker"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_mark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_message"
            app:layout_constraintStart_toEndOf="@id/btn_exit_addmarker"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_exit_addmarker"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="50dp"
            android:text="@string/exit"
            app:layout_constraintEnd_toStartOf="@id/btn_add_marker"
            app:layout_constraintTop_toBottomOf="@id/et_message"
            app:layout_constraintStart_toStartOf="parent"
            />

    </android.support.constraint.ConstraintLayout>
</layout>