<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <data>
        <variable
            name="viewModel"
            type="com.podchody.ui.register.RegisterViewModel" />
        <variable
            name="state"
            type="com.podchody.ui.register.RegisterViewState" />
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/new_user"
            android:text="@string/new_user"
            android:textSize="50sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/email_register"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email_hint"
            android:text="@={state.email}"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/new_user"
            app:layout_constraintStart_toStartOf="@+id/new_user"
            app:layout_constraintTop_toBottomOf="@+id/new_user" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password_hint"
            android:text="@={state.password}"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/email_register"
            app:layout_constraintStart_toStartOf="@+id/email_register"
            app:layout_constraintTop_toBottomOf="@+id/email_register" />

        <Button
            android:id="@+id/register"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:text="@string/create_user"
            android:onClick="@{() -> viewModel.registerUser()}"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />
    </android.support.constraint.ConstraintLayout>
</layout>