<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <data>
        <variable
            name="viewModel"
            type="com.podchody.ui.newgame.NewgameViewModel" />
        <variable
            name="state"
            type="com.podchody.ui.newgame.NewgameViewState" />
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_game_title_fragment"
            android:text="@string/game_title"
            android:inputType="none"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_host"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:inputType="none"
            android:text="host"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/rb_host_runner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_game_title_fragment" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_host_runner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/runner"
            app:layout_constraintEnd_toStartOf="@+id/rb_host_seeker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_host" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_host_seeker"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/seeker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rb_host_runner"
            app:layout_constraintTop_toBottomOf="@+id/tv_host" />

        <TextView
            android:id="@+id/tv_player"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:inputType="none"
            android:text="player"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/rb_player_runner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_host_runner" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_player_runner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/runner"
            app:layout_constraintEnd_toStartOf="@+id/rb_player_seeker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_player" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_player_seeker"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/seeker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rb_player_runner"
            app:layout_constraintTop_toBottomOf="@+id/tv_player" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/start"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            app:fabSize="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_check" />

    </android.support.constraint.ConstraintLayout>
</layout>

